# shivarthu-client

./: .gitignore  Cargo.toml  README.md  index.html  rust-toolchain.toml  tailwind.config.js  vercel.json
.github/workflows/: leptos.yml
artifacts/: metadata.scale
css/: output.css
src/: js_extension_binding.rs  lib.rs  main.rs  package.js  router.rs
src/components/: home.rs  mod.rs
src/components/accounts/: accounts_store.rs  mod.rs  set_phase_from_pass.rs
src/components/accounts/accounts_handling/: add_account.rs
src/components/accounts/multistep_account_creation/: check_mnemonic.rs  mnemonic.rs  mod.rs
src/components/api/: blob_to_bytes.rs  ipfs_request.rs  mod.rs  select_ipfs_provider.rs  upload_file_everland.rs
src/components/api/iroh/: iroh_api.rs  mod.rs
src/components/balance/: mod.rs  transfer_balance.rs  transfer_balance_sign_in.rs
src/components/common/: spinner.rs
src/components/common_components/: mod.rs
src/components/login/: get_login_account.rs  mod.rs
src/components/markdown/: markdown_component.rs  markdown_field.rs  mod.rs
src/components/navigation/: nav.rs  nav_old.rs
src/components/schelling_game/: mod.rs
src/components/schelling_game/department_funding/: apply_jurors.rs  apply_jurors_sign_in.rs  apply_staking_period.rs  (+21 more)
src/components/tests/: block_number.rs  display_error.rs  mod.rs  polkadotjs_test.rs  reuse_code.rs
src/components/transaction/: extension_sign_in copy.rs  extension_sign_in.rs  get_accounts_extension.rs  mod.rs
src/components/upload/: mod.rs  upload_video.rs
src/constants/: auth.rs.bak  constant.rs  local_storage.rs  mod.rs
src/pages/: background.rs  features.rs  milestone.rs  mod.rs
src/services/: common_imp.rs  common_services.rs  error.rs  mod.rs
website/: index.html  output-54e65fe17451290f.css  output-5cfb1dc9600a005b.css  output-80e8a097fdb872f.css  output-cc133813e098fa7d.css  output-e595b595854dd210.css  shivarthu-client-12ee0e62786ba536.js  shivarthu-client-12ee0e62786ba536_bg.wasm  shivarthu-client-179febeb34f6e7b4.js  shivarthu-client-179febeb34f6e7b4_bg.wasm  shivarthu-client-2594ea112ee775e8.js  shivarthu-client-2594ea112ee775e8_bg.wasm  shivarthu-client-4e5587897167baea.js  shivarthu-client-4e5587897167baea_bg.wasm  shivarthu-client-60c24c26e112628b.js  shivarthu-client-60c24c26e112628b_bg.wasm  shivarthu-client-68e2c271e44214cf.js  shivarthu-client-8203ec86752e9e8b.js  shivarthu-client-8203ec86752e9e8b_bg.wasm  shivarthu-client-891528c09642823a.js  shivarthu-client-891528c09642823a_bg.wasm  shivarthu-client-8a4dfadc89814b0.js  shivarthu-client-8a4dfadc89814b0_bg.wasm  shivarthu-client-96c907e529c024df.js  shivarthu-client-9b9aecb55ba446df.js  shivarthu-client-9b9aecb55ba446df_bg.wasm  shivarthu-client-9e1a3f6fbae09d04.js  shivarthu-client-aaef670da0bbaf33.js  shivarthu-client-aaef670da0bbaf33_bg.wasm  shivarthu-client-abfe129abad27066.js  shivarthu-client-abfe129abad27066_bg.wasm  shivarthu-client-b10dc5e2d8cc908a.js  shivarthu-client-bc5d30dd1172918e.js  shivarthu-client-bf7d6aa578946b1f.js  shivarthu-client-bf7d6aa578946b1f_bg.wasm  shivarthu-client-c639e6813da3bf58.js  shivarthu-client-c6ca5ae96a0576fb.js  shivarthu-client-dc2fa82a38e2a05a.js  shivarthu-client-ee57434c6ee406d6.js  shivarthu-client-ee57434c6ee406d6_bg.wasm  (+2 more)
website/.vercel/: project.json
(+165 files in other folders)
